--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,7 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "tailwindcss-tooltip-arrow-after": "^1.0.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "webpack": "^5.76.2"
   }
 }
