--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "turkey-neighbourhoods": "^3.0.0",
     "turkey-yl-district": "^1.1.0",
