redux, setting product array for search, set and design  what happens after selectedFilter

--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "serve": "^14.2.0",
     "turkey-neighbourhoods": "^3.0.0",
     "turkey-yl-district": "^1.1.0",
     "web-vitals": "^2.1.4"
